--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
         <jackson.version>2.10.1</jackson.version>
+        <jackson-jr.version>2.13.0</jackson-jr.version>
         <gson.version>2.8.6</gson.version>
     </properties>
 
@@ -27,6 +28,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jr</groupId>
+            <artifactId>jackson-jr-objects</artifactId>
+            <version>${jackson-jr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
