Add cognito support

--- a/cloud/aws/pom.xml
+++ b/cloud/aws/pom.xml
@@ -115,6 +115,10 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cognitoidentityprovider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>lambda</artifactId>
             <exclusions>
                 <exclusion>
