--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <module>core</module>
         <module>cloud</module>
         <module>local</module>
+        <module>deployment</module>
     </modules>
 
     <build>
@@ -144,7 +145,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
