--- a/local/local-aws/pom.xml
+++ b/local/local-aws/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>nimbus-local</artifactId>
       <version>0.15.3-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
 
     <!-- Test Dependencies-->
     <dependency>
