--- a/local/local/pom.xml
+++ b/local/local/pom.xml
@@ -18,11 +18,11 @@
 
   <properties>
     <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
-    <jackson.version>2.13.0</jackson.version>
+    <jackson-dataformat-yaml.version>2.13.0</jackson-dataformat-yaml.version>
     <org.reflections.version>0.9.11</org.reflections.version>
     <tika.version>2.1.0</tika.version>
     <jetty-server.version>11.0.7</jetty-server.version>
-    <h2.version>1.4.198</h2.version>
+    <h2.version>2.1.210</h2.version>
   </properties>
 
   <dependencies>
@@ -32,19 +32,9 @@
       <version>${tika.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
-      <version>${jackson.version}</version>
+      <version>${jackson-dataformat-yaml.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
