--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,9 +18,10 @@
 
     <properties>
         <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
-        <jackson.version>2.13.0</jackson.version>
+        <jackson.version>2.13.2.1</jackson.version>
+        <jackson-dataformat.version>2.13.0</jackson-dataformat.version>
         <jackson-jr.version>2.13.0</jackson-jr.version>
-        <gson.version>2.8.6</gson.version>
+        <gson.version>2.8.9</gson.version>
     </properties>
 
     <dependencies>
@@ -53,12 +54,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson-dataformat.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson-dataformat.version}</version>
         </dependency>
 
         <!-- Test Dependencies-->
