--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nimbus-cloud</artifactId>
-    <version>0.15.6</version>
+    <version>0.15.7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>com.nimbusframework</groupId>
         <artifactId>nimbus-parent</artifactId>
-        <version>0.15.6</version>
+        <version>0.15.7-SNAPSHOT</version>
     </parent>
 
     <modules>
