--- a/local/local/pom.xml
+++ b/local/local/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>nimbus-local</artifactId>
-  <version>0.15.6</version>
+  <version>0.15.7-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>nimbus local</name>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>com.nimbusframework</groupId>
     <artifactId>nimbus-local-parent</artifactId>
-    <version>0.15.6</version>
+    <version>0.15.7-SNAPSHOT</version>
   </parent>
 
   <properties>
