--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,9 +17,8 @@
     </parent>
 
     <properties>
-        <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
         <jackson.version>2.13.4.1</jackson.version>
-        <jackson-dataformat.version>2.13.0</jackson-dataformat.version>
+        <jackson-dataformat.version>2.15.2</jackson-dataformat.version>
         <jackson-jr.version>2.13.0</jackson-jr.version>
         <gson.version>2.8.9</gson.version>
     </properties>
@@ -79,6 +78,12 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.7.0</version>
             <scope>test</scope>
         </dependency>
 
