--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
 
         <java.version>11</java.version>
 
-        <kotlin.version>1.5.32</kotlin.version>
-        <kotest.version>4.2.6</kotest.version>
+        <kotlin.version>1.8.22</kotlin.version>
+        <kotest.version>5.6.2</kotest.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
@@ -63,7 +63,10 @@
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
-
+        <junit-jupiter-api.version>5.9.3</junit-jupiter-api.version>
+        <mockk.version>1.13.5</mockk.version>
+        <tika.version>2.8.0</tika.version>
+        <commons-io.version>2.11.0</commons-io.version>
     </properties>
 
     <modules>
