--- a/local/local-aws/pom.xml
+++ b/local/local-aws/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>nimbus-aws-local</artifactId>
-  <version>0.16.1</version>
+  <version>0.16.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>nimbus local aws</name>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>com.nimbusframework</groupId>
     <artifactId>nimbus-local-parent</artifactId>
-    <version>0.16.1</version>
+    <version>0.16.3-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>com.nimbusframework</groupId>
       <artifactId>nimbus-local</artifactId>
-      <version>0.16.1</version>
+      <version>0.16.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
