--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -2,26 +2,25 @@
 name: PR Tests
 
 on: [pull_request]
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'adopt'
-          cache: maven
+          distribution: 'temurin'
       - name: Build with Maven
         run: mvn --batch-mode verify
       - name: Run the action # You would run your tests before this using the output to set state/desc
         uses: Sibz/github-status-action@v1
-        with: 
+        with:
           authToken: ${{secrets.GITHUB_TOKEN}}
           context: 'Test Run'
           description: 'Passed'
           state: 'success'
-          sha: ${{github.event.pull_request.head.sha || github.sha}}  
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
