--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        ref: ${{ github.head_ref }}
-        fetch-depth: 0
-
-    - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
-      with:
-        # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x)
-        java-version: 1.11
+        java-version: '11'
+        distribution: 'temurin'
 
     - name: Get Snapshot Version
       id: snapshotversion
