--- a/pom.xml
+++ b/pom.xml
@@ -182,20 +182,23 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.6.3</version>
+                        <groupId>org.jetbrains.dokka</groupId>
+                        <artifactId>dokka-maven-plugin</artifactId>
+                        <version>2.0.0</version>
                         <executions>
                             <execution>
-                                <id>attach-javadoc</id>
+                                <phase>package</phase>
                                 <goals>
-                                    <goal>jar</goal>
+                                    <goal>dokka</goal>
+                                    <goal>javadoc</goal>
+                                    <goal>javadocJar</goal>
                                 </goals>
                             </execution>
                         </executions>
                         <configuration>
-                            <stylesheet>java</stylesheet>
-                            <doclint>none</doclint>
+                            <sourceDirectories>
+                                <dir>${project.basedir}/src/main/java</dir>
+                            </sourceDirectories>
                         </configuration>
                     </plugin>
                     <plugin>
